// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Pruebas en el componente <GifExpertApp /> Debe de compararse correcamente conla imagen 1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[` Pruebas en el componente <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch0"
    />
    <GifGrid
      category="cat"
      key="cat1"
    />
  </ol>
</Fragment>
`;
